--- a/themes/default/templates/login.html
+++ b/themes/default/templates/login.html
@@ -28,7 +28,7 @@
             <div class="col-sm-4 col-sm-offset-4 form-box">
                 <div class="form-top">
                     <div class="form-top-left">
-                        <h1>Raneto</h1>
+                        <h1>Staff Login</h1>
                     </div>
                     <div class="form-top-right">
                         <img src="{{config.base_url}}/favicon.ico"></i>
