ADD Elysium Logo

--- a/themes/default/templates/login.html
+++ b/themes/default/templates/login.html
@@ -31,7 +31,7 @@
                         <h1>Staff Login</h1>
                     </div>
                     <div class="form-top-right">
-                        <img src="{{config.base_url}}/favicon.ico"></i>
+                        <img src="{{config.base_url}}/favicon.ico" width="64"></img>
                     </div>
                 </div>
                 
