--- a/themes/default/templates/edit.html
+++ b/themes/default/templates/edit.html
@@ -32,6 +32,12 @@
             <div id="collapseOne" class="panel-collapse collapse out" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <div class="form-group">
+                  <label for="entry-metainfo-title" class="control-label col-sm-3">{{lang.edit.lableMetaFeature}}</label>
+                  <div class="col-sm-9">
+                    <input id="entry-metainfo-feature" type="checkbox" {{#isFeatured}}checked{{/isFeatured}} class="form-control"></input>
+                  </div>
+                </div>
+                <div class="form-group">
                   <label for="entry-metainfo-title" class="control-label col-sm-3">{{lang.edit.lableMetaTitle}}</label>
                   <div class="col-sm-9">
                     <input id="entry-metainfo-title" type="text" value="{{{meta.custom_title}}}" class="form-control"></input>
