Added options to conact support and slightly improved design

--- a/themes/default/templates/home.html
+++ b/themes/default/templates/home.html
@@ -9,7 +9,7 @@
 </div>
 <div class="list-group span12 pagination-centered">
 {{#featured}}
-  <a href="{{config.base_url}}/{{slug}}" class="list-group-item">⭐ {{title}}</a>
+  <a href="{{config.base_url}}/{{slug}}" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span>  {{title}}</a>
 {{/featured}}
 </div>
 <div class="home-categories row">
