--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -26,37 +26,42 @@
 
   </div>
   <div class="col-sm-9">
-
     <section class="content">
-
       {{#canEdit}}
-        <div class="btn-group btn-group-sm pull-right">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            {{lang.page.actions}} <span class="caret"></span>
+        <div class="btn-group btn-group-sm pull-right" role="group">
+          <button type="button" class="btn btn-default goto-edit">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{lang.page.editPage}}
           </button>
-          <ul class="dropdown-menu" role="menu">
-            <li><a class="goto-edit">{{lang.page.editPage}}</a></li>
-            <li><a data-toggle="modal" data-target="#deleteModal">{{lang.page.deletePage}}</a></li>
-          </ul>
+          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#deleteModal">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> {{lang.page.deletePage}}
+          </button>
         </div>
       {{/canEdit}}
-
-      {{#meta.title}}<h1 class="title">{{#isFeatured}}⭐ {{/isFeatured}}{{meta.title}}</h1>{{/meta.title}}
-
-      {{{content}}}
-
-      <div class="page-meta clearfix">
-        {{#config.support_email}}
-          <div class="contact-support pull-left">
-            <span class="glyphicon glyphicon-envelope"></span> {{lang.page.needHelp}} <a href="mailto:{{config.support_email}}">{{lang.page.getInTouch}}</a>
-          </div>
-        {{/config.support_email}}
-        <div class="last-updated pull-right">
-          {{lang.global.lastUpdated}} {{last_modified}}
-        </div>
+      {{#isFeatured}}
+      <h4>
+        <span class="label label-success">
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span> {{lang.page.featured}}
+        </span>
+      </h4>
+      {{/isFeatured}}
+      {{#meta.title}}<h1 class="title">{{meta.title}}</h1>{{/meta.title}}
+      <div class="page-header">
+        {{{content}}}
       </div>
 
+      <div>
+        <div class="last-updated pull-left pull-bottom">
+          {{lang.global.lastUpdated}} {{last_modified}}
+        </div>
+        <div class="btn-toolbar pull-right" role="group">
+          <a role="button" href="{{config.base_url}}/{{config.submit_ticket}}" class="btn btn-primary">
+            <span class="glyphicon glyphicon-envelope"></span> {{lang.page.submitTicket}}
+          </a>
+          <a role="button" href="{{config.contact_support}}" class="btn btn-primary">
+            <span class="glyphicon glyphicon-comment"></span> {{lang.page.contactSupport}}
+          </a>
+        </div>
+      </div>
     </section>
-
   </div>
 </div>
