--- a/themes/default/public/styles/raneto.css
+++ b/themes/default/public/styles/raneto.css
@@ -1,6 +1,6 @@
 .header {
   color: #CCC;
-  background: #2C323D;
+  background: #080808;
 }
 
 .header .container-fluid {
@@ -92,15 +92,16 @@
 
 .content {
   padding: 40px;
-  margin: 40px 20px;
-  color: #555;
-  border: 1px solid #E9E9E9;
+  margin: 0px 20px;
+  color: #d6d6d6;
+  border: 0px solid #E9E9E9;
   -webkit-box-shadow: 0 1px 50px rgba(0,0,0,0.1);
   box-shadow: 0 1px 50px rgba(0,0,0,0.1);
 }
 
 .content .title {
   margin: 0 0 30px 0;
+  color: #d6d6d6;
 }
 
 .content h1,
@@ -109,7 +110,7 @@
 .content h4,
 .content h5,
 .content h6 {
-  color: #222;
+  color: #d6d6d6;
 }
 
 .content p,
@@ -130,7 +131,7 @@
   margin: 0 auto;
   background: #FFF;
   border: 1px solid #D6D6D6;
-  border-radius: 4px;
+  border-radius: 0px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
