--- a/themes/default/templates/layout.html
+++ b/themes/default/templates/layout.html
@@ -61,7 +61,7 @@
           <form class="search-form form-inline pull-right" action="{{config.base_url}}/">
             <div class="form-group">
               <label class="sr-only" for="search">{{lang.global.search}}</label>
-              <input type="search" class="form-control" name="search" id="search" size="30" value="{{search}}" placeholder="{{lang.global.search}}">
+              <input type="search" class="form-control input-box" name="search" id="search" size="30" value="{{search}}" placeholder="{{lang.global.search}}">
             </div>
           </form>
         </div>
@@ -91,20 +91,17 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="{{lang.global.close}}">
-              <span aria-hidden="true">&times;</span>
-            </button>
             <h4 class="modal-title">{{lang.global.addPage}}</h4>
           </div>
           <div class="modal-body">
             <div class="form-group">
               <label for="page-name" class="control-label">{{lang.global.pageName}}:</label>
-              <input type="text" class="form-control" id="page-name">
+              <input type="text" class="form-control input-box" id="page-name">
             </div>
           </div>
           <div class="modal-footer">
             <button class="btn btn-default" data-dismiss="modal" type="button">{{lang.global.cancel}}</button>
-            <button class="btn btn-primary" id="add-page-confirm" type="button">{{lang.global.save}}</button>
+            <button class="btn btn-success" id="add-page-confirm" type="button">{{lang.global.save}}</button>
           </div>
         </div>
       </div>
@@ -119,7 +116,7 @@
           </div>
           <div class="modal-footer">
             <button class="btn btn-default" data-dismiss="modal" type="button">{{lang.global.no}}</button>
-            <button class="btn btn-primary" id="delete-page-confirm" type="button">{{lang.global.yes}}</button>
+            <button class="btn btn-success" id="delete-page-confirm" type="button">{{lang.global.yes}}</button>
           </div>
         </div>
       </div>
