--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -4,7 +4,7 @@
 
     <ul class="menu">
       {{#canEdit}}
-        <li><input id="newCategory" type="text" class="form-control" placeholder="{{lang.page.addCategory}}"/></li>
+        <li><input id="newCategory" type="text" class="form-control input-box" placeholder="{{lang.page.addCategory}}"/></li>
       {{/canEdit}}
       
       {{#pages}}
