Main Articles category title fix

--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -10,7 +10,9 @@
       {{#pages}}
         <li class="category">
           {{#is_index}}
-            <h5 class="category-title">Main Articles {{#canEdit}}<a class="add-page" data-toggle="modal" data-target="#addModal" title="{{lang.page.addPage}}"><span style="font-weight: bold; font-size: 16px; cursor:pointer">&#43;</span></a>{{/canEdit}}</h5>
+          {{#canEdit}}
+            <h5 class="category-title">{{lang.global.mainArticles}} <a class="add-page" data-toggle="modal" data-target="#addModal" title="{{lang.page.addPage}}"><span style="font-weight: bold; font-size: 16px; cursor:pointer">&#43;</span></a></h5>
+          {{/canEdit}}
           {{/is_index}}
           {{^is_index}}
             <h5 class="category-title">{{title}} {{#canEdit}}<a class="add-page" data-toggle="modal" data-target="#addModal" title="{{lang.page.addPage}}"><span style="font-weight: bold; font-size: 16px; cursor:pointer">&#43;</span></a>{{/canEdit}}</h5>
