--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -1,7 +1,5 @@
-
 <div class="row">
   <div class="col-sm-3 hidden-xs">
-
     <ul class="menu">
       {{#canEdit}}
         <li><input id="newCategory" type="text" class="form-control input-box" placeholder="{{lang.page.addCategory}}"/></li>
@@ -56,10 +54,10 @@
           {{lang.global.lastUpdated}} {{last_modified}}
         </div>
         <div class="btn-toolbar pull-right" role="group">
-          <a role="button" href="{{config.base_url}}/{{config.submit_ticket}}" class="btn btn-margin-bottom-10 btn-primary">
+          <a role="button" href="{{config.base_url}}/{{config.submit_ticket}}" class="btn btn-margin-top-5 btn-primary">
             <span class="glyphicon glyphicon-envelope"></span> {{lang.page.submitTicket}}
           </a>
-          <a role="button" href="{{config.contact_support}}" class="btn btn-margin-bottom-10 btn-primary">
+          <a role="button" href="{{config.contact_support}}" class="btn btn-margin-top-5 btn-primary">
             <span class="glyphicon glyphicon-comment"></span> {{lang.page.contactSupport}}
           </a>
         </div>
