--- a/themes/default/public/styles/raneto.css
+++ b/themes/default/public/styles/raneto.css
@@ -34,6 +34,7 @@
 }
 
 .menu .pages {
+  color: #fff;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -44,25 +45,27 @@
 }
 
 .menu .category-title {
+  color: #AAA;
   margin: 25px 0 10px 0;
-  font-size: 12px;
+  font-size: 18px;
   text-transform: uppercase;
 }
 
 .menu a {
   display: inline-block;
   line-height: 20px;
-  color: #888;
+  color: #444;
+  font-size: 18px;
 }
 
 .menu a:hover {
-  color: #444;
+  color: #FFF;
   text-decoration: none;
 }
 
 .menu .active a {
   font-weight: bold;
-  color: #444;
+  color: #FFF;
 }
 
 .page-home .header .search-form {
@@ -91,7 +94,7 @@
 }
 
 .content {
-  padding: 40px;
+  padding: 40px 40px 60px 40px;
   margin: 40px 20px;
   color: #d6d6d6;
   background: #101010;
@@ -165,11 +168,11 @@
 .text-footer {
   font-size: 85%;
   color: #999;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
-.btn-margin-bottom-10 {
-  margin-top: -5px;
+.btn-margin-top-5 {
+  margin-top: 5px;
 }
 
 .padding-5 {
