--- a/themes/default/public/styles/ghostdown.css
+++ b/themes/default/public/styles/ghostdown.css
@@ -6,74 +6,9 @@ body {
 	background-color: #080808;
 }
 
-.label {
-	border-radius: 0;
-}
-
-.btn {
-	border-radius: 0;
-}
-
-.btn-primary {
-	background-color: transparent;
-	border-color: #333333;
-	border-radius: 0;
-}
-
-.btn-default {
-	background-color: transparent;
-	border-color: #333333;
-	border-radius: 0;
-	color: #d6d6d6;
-}
-
-.input-box {
-	background-color: transparent;
-	border-color: #333333;
-	border-radius: 0;
-	color: #d6d6d6;
-}
-
-.panel {
-	background-color: transparent;
-	border-color: #333333;
-	border-radius: 0;
-}
-
-.panel-default .panel-heading {
-	background-color: #191919;
-	border-color: #333333;
-	border-radius: 0;
-	color: #d6d6d6;
-}
-
-.panel .list-group, .panel .panel-collapse .list-group {
-	background-color: #101010;
-	border-color: #333333;
-	border-radius: 0;
-}
-
-.list-group-item {
-	background-color: #101010;
-	border-color: #333333;
-	color: #286090 !important;
-	border-radius: 0;
-}	
-
-.list-group-item:hover {
-	background-color: #286090 !important;
-	border-color: #333333;
-	color: #d6d6d6 !important;
-	border-radius: 0;
-}	
-
-.jumbotron {
-	background-color: #101010;	
-}
-
 .CodeMirror {
 	font-family: monospace;
-	height: 300px
+	height: 300px;
 }
 .CodeMirror-scroll {
 	overflow: auto
@@ -525,6 +460,13 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 		padding-left: 40px
 	}
 }
+
+.form-white {
+	background-color: #FFF !important;
+	color: black !important;
+	font-size: 14px;
+}
+
 .features .editor .entry-markdown-content textarea {
 	border: 0;
 	width: 100%;
@@ -536,8 +478,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	left: 0
+	left: 0;
 }
+
 .features .editor .entry-markdown-content textarea:focus {
 	outline: 0
 }
@@ -639,13 +582,4 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 	.features .editor .scrolling .CodeMirror-scroll, .features .editor .scrolling .entry-preview-content {
 		box-shadow: 0 3px 5px rgba(0,0,0,0.05) inset
 	}
-}
-
-.modal-content {
-	border-radius: 0;
-	background: #101010;
-}
-
-.modal-title {
-	color: #d6d6d6;
 }
