--- a/themes/default/templates/edit.html
+++ b/themes/default/templates/edit.html
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group form-white">
           <textarea id="entry-markdown">{{{content}}}</textarea>
         </div>
       </div>
