--- a/themes/elysium/templates/layout.html
+++ b/themes/elysium/templates/layout.html
@@ -31,16 +31,6 @@
           <a href="{{config.base_url}}/" class="logo">{{config.site_title}}</a>
         </div>
         <div class="col-sm-6">
-          {{#config.googleoauth}}
-          <form class="form-inline pull-right">
-            {{#config.authentication}} {{#loggedIn}} &nbsp;
-            <span>{{profile.displayName}}</span> &nbsp;
-            <a href="{{config.base_url}}/auth/logout" class="btn btn-info">{{lang.login.logout}}</a> {{/loggedIn}} {{^loggedIn}} &nbsp;
-            <a href="{{config.base_url}}/auth/login" class="btn btn-info">{{lang.login.login}}</a> {{/loggedIn}} {{/config.authentication}}
-          </form>
-          {{/config.googleoauth}}
-
-          {{^config.googleoauth}}
           <form class="form-inline pull-right">
             {{#config.authentication}}
               {{#loggedIn}}
@@ -56,12 +46,12 @@
               {{/loggedIn}}
             {{/config.authentication}}
           </form>
-          {{/config.googleoauth}}
           
           <form class="search-form form-inline pull-right" action="{{config.base_url}}/">
             <div class="form-group">
               <label class="sr-only" for="search">{{lang.global.search}}</label>
-              <input type="search" class="form-control input-box" name="search" id="search" size="30" value="{{search}}" placeholder="{{lang.global.search}}">
+              <input type="search" class="form-control input-box" name="search" id="search" size="30" value="{{search}}" placeholder="{{lang.home.searchKnowledgeBase}}">
+              <input type="submit" class="btn btn-primary" value="{{lang.global.search}}">
             </div>
           </form>
         </div>
